[package]
name = "prismarine-anchor-nbt"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

# Note that licenses of dependencies include:
# Unicode-3.0       - no copies of their Data Files or Software are included here,
# Unicode-DFS-2016    we just use a unicode library (without modifying said library).
#                     No action needed.
# Apache-2.0        - the only dependency requiring Apache-2.0 (without 'OR [something]')
#                     has no NOTICE file
#                     (plus we only use them through Cargo, not their source code)
# MIT               - requires copyright notice for all substantial portions of code;
#                     here, the license file for quartz_nbt needed to be included
# Zlib              - no req's if you don't modify their code

[lints]
workspace = true

[dependencies]
anyhow      .workspace = true
byteorder   .workspace = true
cesu8       .workspace = true
flate2      .workspace = true
thiserror   .workspace = true
varint-rs   .workspace = true

float-cmp       = { workspace = true, optional = true }
# We don't directly use this, but our deps do, and it may need to have the js feature enabled.
# In particular, rusty-leveldb and unicode_names2 do, via rand and phf.
getrandom       = { workspace = true, optional = true }
indexmap        = { workspace = true, optional = true }
serde           = { workspace = true, optional = true }
unicode_names2  = { workspace = true, optional = true }

# NOTE: whenever a new feature is added, the Makefile might need to be updated.
[features]
default = [ "named_escapes" ]
# TODO: Need to actually use document_features for the
# below comments to be visible in the generated docs

## If enabled, Compound tags will preserve the order of their elements.
preserve_order      = [ "dep:indexmap" ]
## Provides an NBT tag wrapper implementing `Eq`, `Ord`, and `Hash`.
comparable          = []
## Provides approximate float comparisons for `ComparableNbtTag`.
float_cmp           = [ "comparable", "dep:float-cmp" ]

## Adds support for the `\N{name}` named Unicode escapes described in the Java 1.21.5 spec
named_escapes       = [ "dep:unicode_names2" ]
## By default, NBT IO functions only support reading and writing named Compound tags to and from
## bytes (such as NBT files). This feature provides additional IO functions for:
## - named List tags
## - named tags of any variant
## - unnamed tags of any variant
## Note that a List tag is sometimes used as the root tag by Minecraft Bedrock Edition.
## Currently, other tag variants and unnamed tags aren't read or written to NBT files.
## You probably shouldn't do so either, unless you have very good reason to.
allow_any_root     = []
## If enabled, the maximum nesting depth limit used when parsing or writing NBT or SNBT data can
## be configured via additional functions for parsing and writing. Note that the default limit
## is what Minecraft uses, 512.
configurable_depth  = []

## Enables serde support for NBT tags, lists, and compounds.
serde               = [ "dep:serde" ]
## Derives `Serialize` and `Deserialize` for various plain-old-data structs.
derive_serde        = [ "serde/serde_derive"]
## Derives `PartialEq`, `Eq`, `PartialOrd`, `Ord`, and `Hash` for various plain-old-data structs.
derive_standard     = []

# We don't directly use getrandom, but our deps do, and it needs to have the js feature enabled.
# In particular, rusty-leveldb and unicode_names2 do, via rand and phf.
## Ensures that this crate is compatible with JS and browser WASM.
## In particular, `getrandom` might not be web-compatible otherwise.
js                  = [ "getrandom/js" ]
