[package]
name = "prismarine-world"
authors = ["Finley Huggins"]
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "" # Will probably be MIT OR Apache-2.0.

[dependencies]
prismarine-nbt  .workspace = true

flate2          .workspace = true
rusty-leveldb   .workspace = true
thiserror       .workspace = true
web-time        .workspace = true
zip             .workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
# We don't directly use this, but our deps do, and it needs to have the js feature enabled.
getrandom = { version = "0.2", features = ["js"] }
