[package]
name = "prismarine-anchor-leveldb-entries"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-leveldb-values    = { workspace = true, features = ["all"] }
prismarine-anchor-mc-datatypes      = { workspace = true, features = ["all"] }
prismarine-anchor-nbt               .workspace = true

log                 .workspace = true
subslice-to-array   .workspace = true
thiserror           .workspace = true

[features]
derive_standard = [
    "prismarine-anchor-leveldb-values/derive_standard",
    "prismarine-anchor-mc-datatypes/derive_standard"
]
