[package]
name = "prismarine-anchor-leveldb-entries"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-mc-datatypes      .workspace = true
prismarine-anchor-nbt               = { workspace = true, features = ["preserve_order"] }
prismarine-anchor-util              .workspace = true

bijective-enum-map  .workspace = true
indexmap            .workspace = true
log                 .workspace = true
nonmax              .workspace = true
subslice-to-array   .workspace = true
thiserror           .workspace = true
vecmap-rs           .workspace = true
xxhash-rust         .workspace = true
zerocopy            = { workspace = true, features = ["derive"] }

[features]
derive_standard = ["prismarine-anchor-mc-datatypes/derive_standard"]
key   = []
entry = ["key"]
