[package]
name = "prismarine-anchor-mc-datatypes"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
serde       = { workspace = true, optional = true }
thiserror   .workspace = true

[features]
## Derives `Serialize` and `Deserialize` for various structs.
derive_serde    = ["serde/serde_derive"]
## Derives `PartialEq`, `Eq`, `PartialOrd`, `Ord`, and `Hash` for various structs.
derive_standard = []
