[package]
name = "prismarine-anchor-translators"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-nbt           .workspace = true
prismarine-anchor-translation   .workspace = true

serde           = { workspace = true, features = ["serde_derive"] }
serde_json      = { workspace = true, features = ["raw_value"] }
thiserror       .workspace = true

[features]
default         = [ "py_mc_translate" ]

py_mc_translate = []
minecraft_data  = []
