[package]
name = "prismarine-anchor-world"
authors = ["Finley Huggins"]
license.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
prismarine-anchor-leveldb-entries   .workspace = true
prismarine-anchor-nbt               .workspace = true
prismarine-anchor-translation       .workspace = true
prismarine-anchor-translators       .workspace = true
prismarine-anchor-util              .workspace = true

anyhow          .workspace = true
flate2          .workspace = true
rusty-leveldb   .workspace = true
thiserror       .workspace = true
web-time        .workspace = true
zip             .workspace = true

# We don't directly use this, but our deps do, and it may need to have the js feature enabled.
# In particular, rusty-leveldb and unicode_names2 do, via rand and phf.
getrandom       = { workspace = true, optional = true }

[features]
default         = ["py_mc_translate"]

py_mc_translate = ["prismarine-anchor-translators/py_mc_translate"]
minecraft_data  = ["prismarine-anchor-translators/minecraft_data"]

## Ensures that this crate is compatible with JS and browser WASM.
## In particular, `getrandom` might not be web-compatible otherwise.
js              = ["getrandom/js"]
